# ImageAIServer

./: .gitignore  Dockerfile  Dockerfile.base  Dockerfile.torch  README.md  __init__.py  __main__.py  docker-compose.yml  main.py  model_converter.py  pyproject.toml  requirements-torch-macos.txt  requirements-torch-minimal.txt  requirements-torch.txt  requirements.txt
chat_server/: router.py  torch_router.py
docs/: ARCHITECTURE.md  DOCKER.md  MODEL_CONVERSION.md  PYTORCH_BACKEND.md  QUICK_START.md  README.md
face_api/: Dockerfile  main.py  presets.py
face_server/: router.py
imageai_server/: __main__.py  main.py
imageai_server/chat_server/: router.py  torch_router.py
imageai_server/face_api/: README.md  config.py  main.py  presets.py  utils.py
imageai_server/face_server/: router.py
imageai_server/generation/: model_config.py  model_variants.py  models.yaml  router.py  runtime_manager.py
imageai_server/manage_api/: router.py
imageai_server/multimodal_chat/: README.md  main.py  router.py  vlm_router.py  vlm_service.py
imageai_server/multimodal_chat/strategies/: __init__.py  base_strategy.py  mlx_strategy.py
imageai_server/shared/: diffusion_model_loader.py  diffusion_model_registry.py  engine_manager.py  hf_utils.py  model_identifier.py  model_manager.py  model_types.py  onnx_loader.py  provider_utils.py  tensorrt_rtx_backend.py  torch_loader.py  unified_model_registry.py
imageai_server/static/manage/: index.html  navigation.js  styles-old.css  styles.css  unified-manage.html  unified-manage.js  vision-test.html
imageai_server/templates/: base.html  compare-faces.html  docs.html  generate.html  generate_v2.html  generate_v4.html  home.html  models.html  vision-chat.html
imageai_server/tensorrt/: __init__.py  nvidia_sdxl_pipeline.py
imageai_server/tensorrt/demo_diffusion/: engine.py
imageai_server/tensorrt/demo_diffusion/path/: resolve_path.py
imageai_server/tensorrt/demo_diffusion/pipeline/: flux_pipeline.py  stable_cascade_pipeline.py  stable_diffusion_35_pipeline.py  stable_diffusion_3_pipeline.py  stable_diffusion_pipeline.py  stable_video_diffusion_pipeline.py
imageai_server/utils/: README.md  __init__.py  generate_image.py
imageai_server/utils/mcp-server/: README.md  index.js
imageaiserver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
manage_api/: router.py
mcp-server/: README.md  index.js
onnx_chat/: Dockerfile  README.md  main.py
scripts/: build-docker.sh  test_backends.py  test_clean_architecture.py
sd15_onnx/fp16/: README.md
sdxl_turbo_coreml_hf/: README.md
shared/: manage_cache.py  model_backend.py  model_manager.py  onnx_backend.py  torch_loader.py
stable-diffusion-v1-5-onnx/: README.md
static/manage/: index.html  navigation.js  unified-manage.html  vision-test.html
tests/: README.md  test_face_pipeline.py
tests/integration/: test_face_detection_pipeline.py  test_gemma3n_onnx.py  test_new_endpoints.py  test_smolvlm_int8.py  test_vlm_smoke.py
tests/manual/: run_pizza_recognition.py  test_pizza_recognition.py
tests/unit/: test_diffusion_model_registry.py  test_face_onnx_models.py  test_gpu_status.py  test_local_model_listing.py  test_model_id_format.py  test_torch_simple.py  test_unified_model_registry.py
tools/: README.md  clean_tensorrt_rtx_builder.py  create_onnx_model.py
tools/tensorrt_rtx_builders/: __init__.py  base_builder.py  flux_build_only.py  flux_builder.py  sdxl_build_only.py  sdxl_builder.py
tools/tensorrt_rtx_builders/utils/: __init__.py  base_model.py  base_params.py  engine.py  engine_metadata.py  memory_manager.py  model_registry.py  notebook_utils.py  path_manager.py  pipeline.py  timing_data.py
